fix(styles): svg shifting issue in safari

--- a/packages/styles/components/link.css
+++ b/packages/styles/components/link.css
@@ -53,6 +53,10 @@
      */
     transition: opacity 150ms var(--ease-out);
     @apply motion-reduce:transition-none;
+
+    & svg {
+      @apply transform-gpu;
+    }
   }
 
   .link__icon[data-default-icon="true"] {
